--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-body {
-  background-color: #0e1315;
+.App {
   color: #e5e7eb;
 }
 h1 {
@@ -11,18 +10,9 @@ h1 {
   justify-content: center;
 }
 /*making the gallery flex and also adding wrap to make it a litle bit responsive */
-.gallary {
-  width: 50%;
+.gallery {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
-}
-/* styling the images */
-.gallary > img {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 10px;
 }
