--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,21 @@ h1 {
 .gallery-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 15px;
 }
 /*making the gallery flex and also adding wrap to make it a litle bit responsive */
 .gallery {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 15px;
 }
